products/stream/4.1/usecase-azure-event-hubs/index.md
# Azure Event Hubs Integrations


To ingest data from an Azure Event Hub, you can create an Event Hub and a Cribl Stream Azure Event Hubs Source configured to consume data from the Event Hub. This page documents that integration.

Your Azure Event Hubs account must be at the Standard (or a higher) pricing tier, because the Basic pricing tier does not support the [PLAIN authentication method](https://datatracker.ietf.org/doc/html/rfc4616) Cribl Stream uses for Event Hubs.

## Prepare Azure Event Hubs to Send Data to Cribl Stream

First, create an Azure Event Hub as described in the [Azure documentation](https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-create).

{{< id `namespace` >}}In this tutorial, we use `CriblTest` as the **Namespace name**. You can use any **Namespace name** you like, as long as it is unique across Azure.

![Creating an Event Hubs Namespace](st-uc-azure-event-hubs01.f6ab0f6b36.png)
{border="true"}

Collect the information you will need when configuring Cribl Stream:

1.  In the **Deployment** page, click **Go to Resource**. 

1. Copy the **Host Name** and store it.

![Finding the Host name and Shared access policies](st-uc-azure-event-hubs02.35566a3c3f.png)
{border="true"}

3. {{< id `connection-string` >}} Click **Shared Access Policies** to open the page  where you can select policies for your Event Hubs Namespace, and then click `RootManageSharedAccessKey` to show details for that policy.

![Viewing Shared access policies](st-uc-azure-event-hubs03.93528b429f.png)
{border="true"}

4. Copy and securely store the **Connection String-primary key**.

5. Click on Event Hubs on the left-hand column and copy the Event Hubs name you want to ingest.

## Configure the Azure Event Hubs Source in Cribl Stream

1. From a Cribl Stream instance's or Group's **Manage** submenu, select **Data** > **Sources**, then select **Azure Event Hubs** from the **Manage Sources** page's tiles or left nav. Click **New Source** to open the **Azure Event Hubs** > **New Source** modal.

2.  In the **General Settings** tab, enter the following values:

    - **InputId**: An **InputId** of your choice. For example: `Stream`.
    - **Brokers**: End the Host Name you wrote down earlier and append port `9093`. For this example: `CriblTest.servicebus.windows.net:9093`.
    - **Event Hub Name**: The name of your Azure Event Hub. For this example: `AzureEH`. The **Event Hub Name** is equivalent to a [Kafka topic](https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-for-kafka-ecosystem-overview#kafka-and-event-hub-conceptual-mapping). It should not be the same as the Azure Event Hubs namespace value you created [above](#namespace).
    - **Group ID**: This value can be `Cribl`, but the **Group ID** cannot be shared with other technologies. Sharing this value across technologies may cause unexpected behavior, such as failing to collect logs reliably.

![The General Settings tab](st-uc-azure-event-hubs04.8c42868361.png)
{border="true"}

3. In the **Authentication** tab, enter or select the following values:

    - **SASL mechanism**:  `PLAIN` (the only supported option).
    - **Username**: `$ConnectionString` (the default generated by Azure).
    - **Authentication Method**: Select `Manual` to use the Connection String Key generated by Azure Event Hubs.
    - **Password**: Enter the **Connection String-primary key** that you [copied](#connection-string) earlier. 

![The Authentication tab](st-uc-azure-event-hubs05.db54288253.png)
{border="true"}

## Verify that Data is Flowing from Your Azure Event Hub to Cribl Stream

Before you can verify that data is reaching Cribl Stream, you must ensure that it is flowing out of your Azure Event Hub in the first place.

One option is to configure a [Datagen](https://docs.cribl.io/docs/datagens) and a [Route](https://docs.cribl.io/docs/routes) to send data to the Event Hub destination. We'll assume you have done that, or gotten data flowing from your Azure Event Hub in some other way.

1. In Cribl Stream, open the **Sources** > **Azure Event Hubs** > **Cribl Stream** page. This should show your Source, with a message confirming that it is working properly. 

![A working Source](st-uc-azure-event-hubs06.e3145e8b52.png)
{border="true"}

2. Open the **Live Data** tab. You should see the data that is flowing from your Azure Event Hub to Cribl Stream.

![Viewing Live Data](st-uc-azure-event-hubs07.29dba0bbb1.png)
{border="true"}
